# awesome-gbb

./: .env.ci.example  .gitignore  AGENTS.md  DEMOS.md  Makefile  README.md  THREADLIGHT.md  ZAVA.md  index.html  plugin.json  threadlight-experience.html
.github/: PULL_REQUEST_TEMPLATE.md  ci-shared-preamble.md  copilot-setup-steps.md  quarantine.yml  skill-deps.yml
.github/plugin/: marketplace.json
.github/workflows/: auto-merge-copilot.yml  automation-pr-gate.yml  copilot-cli-foundry-auth-smoke.yml  copilot-pr-autorun.yml  pin-validation.yml  skill-freshness.yml  skill-test.yml  skill-validation.yml
docs/: _styles.css  index.html  llms.txt  threadlight-experience.html  zava-experience.html
docs/audit/: README.md  azd-patterns-audit-trail.md  foundry-agt-audit-trail.md  foundry-evals-audit-trail.md  foundry-hosted-agents-audit-trail.md  foundry-mcp-aca-audit-trail.md  foundry-memory-audit-trail.md  foundry-observability-audit-trail.md  foundry-prompt-agents-audit-trail.md  foundry-toolbox-audit-trail.md
docs/engineering/: index.html
docs/plugins/: index.html
docs/plugins/awesome-gbb-azure/: index.html
docs/skills/: index.html
docs/threadlight/: index.html
docs/zava/: index.html
plugins/: README.md
plugins/awesome-gbb-azure/: plugin.json
plugins/awesome-gbb-basic/: plugin.json
plugins/awesome-gbb-threadlight/: plugin.json
plugins/awesome-gbb-threadlight/skills/ghcp-hosted-agents/references/: Dockerfile  agent.yaml  invoke_agent.py  pyproject.toml
scripts/: automation-pr-gate.py  build-plugins.py  build-site.py  build-test-matrix.py  check-freshness.py  resolve-foundry-project.py  run-pin-validation.py  setup-automerge-pat.sh  site_templates.py  validate-skills.py
scripts/templates/: upstream-pin.template.md
scripts/tests/: test_automation_pr_gate.py  test_azd_patterns_fixture_audit.py  test_build_test_matrix.py  test_check_freshness_pkg_drift.py  test_citadel_access_contract_probe.py  test_e2e_foundry_toolbox.py  test_e2e_prompt_agents.py  test_e2e_voice_live.py  test_foundry_agt_capability_detector.py  test_foundry_agt_runtime_evidence.py  test_foundry_cost_monitoring_fixture.py  test_foundry_evals_fixture_contract.py  test_foundry_evals_last_run.py  test_foundry_evals_trust.py  test_foundry_iq_ga_contract.py  test_foundry_mcp_aca_fixture_contract.py  test_foundry_observability_alert_catalog.py  test_foundry_observability_evidence.py  test_foundry_observability_kql_probes.py  test_foundry_observability_profile.py  test_ghcp_hosted_agents_ga_contract.py  test_gpt_56_ga_contract.py  test_resolve_foundry_project.py  test_unit_azure_backup_readiness.py  test_unit_azure_monitor_alert_baseline.py  test_unit_azure_resource_diagnostics.py  test_unit_foundry_rbac_audit.py  test_validate_skills.py
skills/: README.md
skills/agent-governance-toolkit/: SKILL.md
skills/auto-demo-producer/: SKILL.md
skills/azd-patterns/: SKILL.md
skills/azure-backup-readiness/: README.md  SKILL.md
skills/azure-monitor-alert-baseline/: README.md  SKILL.md
skills/azure-resource-diagnostics/: README.md  SKILL.md
skills/azure-sre-agent/: README.md  SKILL.md
skills/azure-tenant-isolation/: SKILL.md
skills/citadel-hub-deploy/: SKILL.md
skills/citadel-spoke-onboarding/: SKILL.md
skills/compose-org/: README.md  SKILL.md
skills/foundry-agt/: SKILL.md  requirements.txt
skills/foundry-caphost-lifecycle/: SKILL.md
skills/foundry-cost-monitoring/: SKILL.md
skills/foundry-cross-resource/: SKILL.md
skills/foundry-doc-vision-speech/: SKILL.md
skills/foundry-evals/: SKILL.md  requirements.txt
skills/foundry-hosted-agents/: README.md  SKILL.md
skills/foundry-hosted-agents/references/python/: container.py  foundry_agent_timeout.py  main.py  pyproject.toml  version_rollout.py
skills/foundry-iq/: .env.sample  PRD.md  README.md  SKILL.md  requirements.txt
skills/foundry-mcp-aca/: SKILL.md
skills/foundry-memory/: SKILL.md
skills/foundry-network-runbook/: SKILL.md
skills/foundry-observability/: SKILL.md  requirements.txt
skills/foundry-prompt-agents/: SKILL.md
skills/foundry-rbac-audit/: README.md  SKILL.md
skills/foundry-routines/: SKILL.md
skills/foundry-skill-catalog/: SKILL.md
skills/foundry-teams-bot/: SKILL.md
skills/foundry-toolbox/: SKILL.md
skills/foundry-vnet-deploy/: README.md  SKILL.md
skills/foundry-voice-live/: SKILL.md
skills/foundry-webiq/: SKILL.md
skills/gbb-humanizer/: SKILL.md
skills/gbb-pptx/: SKILL.md
skills/gbb-pulse/: SKILL.md
skills/ghcp-cli-config/: SKILL.md
skills/ghcp-hosted-agents/: SKILL.md
skills/ghcp-hosted-agents/references/: agent.yaml  container.py  invoke_agent.py  pyproject.toml  upstream-pin.md
skills/ghcp-hosted-agents/references/yaml/: azure.yaml
skills/ip-catalog/: SKILL.md
skills/lean-safe-check/: SKILL.md
skills/lean-seller-guide/: SKILL.md
skills/paygo-ptu-cost-analyzer/: SKILL.md
skills/pptx/: SKILL.md
skills/research-company/: README.md  SKILL.md
skills/threadlight-demo-data-factory/: SKILL.md
skills/threadlight-deploy/: SKILL.md
skills/threadlight-design/: SKILL.md
skills/threadlight-event-triggers/: SKILL.md
skills/threadlight-hitl-patterns/: SKILL.md
skills/threadlight-local-test/: SKILL.md
skills/threadlight-safe-check/: SKILL.md
skills/threadlight-workspace-ui/: SKILL.md
skills/zava-workspace-deploy/: SKILL.md
(+470 files in other folders)
