[project]
name = "my-agent"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "github-copilot-sdk~=1.0.0",
    "azure-ai-agentserver-invocations==1.0.0b6",
    "azure-identity~=1.25.3",
    "python-dotenv~=1.2.2",
]

[tool.setuptools]
packages = []

[tool.uv]
required-environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
prerelease = "if-necessary-or-explicit"
