[project]
name = "my-agent"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "github-copilot-sdk~=0.3.0",
    "azure-ai-agentserver-invocations==1.0.0b3",
    "azure-identity~=1.25.3",
    "python-dotenv~=1.0.0",
]

[tool.setuptools]
packages = []

[tool.uv]
required-environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
prerelease = "if-necessary-or-explicit"
